--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
           <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
+          <td>Laravel</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
           <td>Documet Object Model</td>
           <td>⭐⭐⭐⭐</td>
         </tr>
